--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -5,7 +5,7 @@
         <div class="col-xs-12 picCover">
             <div class="text">
                 <h1>PINTEREST</h1>
-                <p>Pin more pictures here</p>
+                <p>For Jiao Ge</p>
             </div>
         </div>
         <div class="col-xs-12">
